--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@pdf-test/source": "file:",
     "fabric": "^5.3.0-browser",
     "gsap": "^3.12.5",
+    "primeicons": "^7.0.0",
     "primeng": "^17.18.7",
     "rxjs": "~7.8.0",
     "tesseract.js": "^5.1.0",
